--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Boats and boating -- Juvenile fiction'
 - !lcsh 'Detective and mystery stories'
+- GITenberg
 title: The Rival Campers Ashore; or, The Mystery of the Mill
 url: http://www.gutenberg.org/ebooks/28504
